# goit-web-hw-09

./: app.py  connection.py  pyproject.toml  seed.py
scrapy_project/scrapy_project/: items.py  pipelines.py  settings.py
scrapy_project/scrapy_project/spiders/: data_quotes.py
